<resources>
    <string name="app_name">EffectiveMobile-test</string>
    <string name="enter">Вход</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="to_enter">Нажимая кнопку “Войти”, Вы принимаете\n<u>условия программы лояльности</u></string>
    <string name="enter_btn">Войти</string>
    <string name="catalog">Каталог</string>
    <string name="by_popular">По популярности</string>
    <string name="by_price_decrease">По уменьшению цены</string>
    <string name="by_price_increase">По возрастанию цены</string>
    <string name="filters">Фильтры</string>
    <string name="main">Главная</string>
    <string name="cart">Корзина</string>
    <string name="discount">Акции</string>
    <string name="profile">Профиль</string>
    <string name="user_profile">Личный кабинет</string>
    <string name="favorite">Избранное</string>
    <string name="item_number">%1$d %2$s</string>
    <string name="available_items">Доступно для заказа %1$d %2$s</string>
    <string name="discount_percent">-%1$d%%</string>
    <string name="shops">Магазины</string>
    <string name="feedback">Обратная связь</string>
    <string name="feedback_count">(%1$d)</string>
    <string name="item_refund">Возврат товара</string>
    <string name="exit">Выйти</string>
    <string name="dot_symbol">·</string>
    <string name="price_with_unit">%1$d %2$s</string>
    <string name="name_surname">%1$s %2$s</string>
    <string name="description">Описание</string>
    <string name="offer">Оферта</string>
    <string name="hide">Скрыть</string>
    <string name="Characteristics">Характеристики</string>
    <string name="ingredients">Состав</string>
    <string name="show">Подробнее</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="showAll">Смотреть все</string>
    <string name="face">Лицо</string>
    <string name="body">Тело</string>
    <string name="suntan">Загар</string>
    <string name="mask">Маски</string>
    <string name="goods">Товары</string>
    <string name="brands">Бренды</string>
    <string-array name="sorting">
        <item>@string/by_popular</item>
        <item>@string/by_price_decrease</item>
        <item>@string/by_price_increase</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_code">+7</string>
    <string name="enter_name_on_rus">Введите имя на русском языке, без пробелов и символов</string>
    <string name="enter_surname_on_rus">Введите фамилию на русском языке, без пробелов и символов</string>
    <string name="couldnt_be_blank">Поле не может быть пустым</string>

</resources>