<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.akumakeito.presentation.ui.fragments.FragmentCatalog">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="?attr/toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/catalog" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing16"
        android:layout_marginEnd="@dimen/spacing4">


        <LinearLayout
            android:id="@+id/btn_sort_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/btn_filters"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_filters">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_type_sort_by__state_default" />

            <TextView
                android:id="@+id/tv_sort_by"
                style="?attr/textAppearanceTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing8"
                android:text="@string/by_popular"
                android:textColor="@color/dark_grey" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_type_down_arrow__state_default" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_filters"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/filters"
            app:icon="@drawable/icon_type_filter__state_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/chip_contaner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing16">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedChip="@id/chipAll">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showAll"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/face"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSuntan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suntan"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mask"/>

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing16"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/card_item" />

</LinearLayout>
