<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sort_by_popular"
        style="?attr/textAppearanceTitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingHorizontal="@dimen/spacing8"
        android:paddingVertical="@dimen/spacing8"
        android:text="@string/by_popular" />


    <TextView
        android:id="@+id/sort_by_price_decrease"
        style="?attr/textAppearanceTitleMedium"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing8"
        android:paddingVertical="@dimen/spacing8"
        android:text="@string/by_price_decrease" />

    <TextView
        android:id="@+id/sort_price_increase"
        style="?attr/textAppearanceTitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:paddingHorizontal="@dimen/spacing8"
        android:paddingVertical="@dimen/spacing8"
        android:text="@string/by_price_increase" />

</LinearLayout>