<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="?attr/toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/enter" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing16"
        android:layout_marginBottom="@dimen/spacing16"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@id/input_surname_layout"
        app:endIconDrawable="@drawable/icon_type_small_close__state_default"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_surname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing16"
        android:hint="@string/surname"
        android:layout_marginBottom="@dimen/spacing16"
        app:layout_constraintBottom_toTopOf="@id/input_phone_layout"
        app:endIconDrawable="@drawable/icon_type_small_close__state_default"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing16"
        android:hint="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:endIconDrawable="@drawable/icon_type_small_close__state_default"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing16"
        android:layout_marginTop="@dimen/spacing32"
        android:text="@string/enter_btn"
        app:layout_constraintTop_toBottomOf="@id/input_phone_layout"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/txt_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/spacing36"
        android:gravity="center"
        android:textColor="@color/grey"
        android:textSize="@dimen/txt10"/>




</androidx.constraintlayout.widget.ConstraintLayout>