<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="?attr/toolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/user_profile" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_user_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_items_height"
        android:layout_marginHorizontal="@dimen/spacing16"
        android:layout_marginTop="@dimen/spacing24"
        android:background="@drawable/profile_items_shape"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing8"
            android:src="@drawable/icon_type_account__state_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_user_name"
            style="?attr/textAppearanceTitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing16"
            app:layout_constraintBottom_toTopOf="@id/tv_phone_number"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintTop_toTopOf="@id/iv_profile"
            tools:text="Марина Иванова" />

        <TextView
            android:id="@+id/tv_phone_number"
            style="?attr/textAppearanceTitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing6"
            android:layout_marginStart="@dimen/spacing16"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            app:layout_constraintStart_toEndOf="@id/iv_profile"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile"
            tools:text="+7 993 877 44 02" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/log_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/spacing16"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_favorite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_items_height"
        android:layout_marginHorizontal="@dimen/spacing16"
        android:layout_marginTop="@dimen/spacing24"
        android:background="@drawable/profile_items_shape"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing8"
            android:src="@drawable/icon_type_heart__state_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_favorite"
            style="?attr/textAppearanceTitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing16"
            app:layout_constraintBottom_toTopOf="@id/tv_item_number"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/iv_favorite"
            app:layout_constraintTop_toTopOf="@id/iv_favorite"
            android:text="@string/favorite" />

        <TextView
            android:id="@+id/tv_item_number"
            style="?attr/textAppearanceTitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing6"
            android:layout_marginStart="@dimen/spacing16"
            app:layout_constraintTop_toBottomOf="@id/tv_favorite"
            app:layout_constraintStart_toEndOf="@id/iv_favorite"
            app:layout_constraintBottom_toBottomOf="@id/iv_favorite"
            android:text="@string/item_number"
            tools:text="1 товар" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_type_right_arrow__state_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/spacing16"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_shops"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_items_height"
        android:layout_marginHorizontal="@dimen/spacing16"
        android:layout_marginTop="@dimen/spacing8"
        android:background="@drawable/profile_items_shape"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_shops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing8"
            android:src="@drawable/icon_type_shop__state_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_shops"
            style="?attr/textAppearanceTitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing16"
            app:layout_constraintBottom_toBottomOf="@id/iv_shops"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/iv_shops"
            app:layout_constraintTop_toTopOf="@id/iv_shops"
            android:text="@string/shops" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_type_right_arrow__state_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/spacing16"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_items_height"
        android:layout_marginHorizontal="@dimen/spacing16"
        android:layout_marginTop="@dimen/spacing8"
        android:background="@drawable/profile_items_shape"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing8"
            android:src="@drawable/icon_type_feedback__state_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_feedback"
            style="?attr/textAppearanceTitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing16"
            app:layout_constraintBottom_toBottomOf="@id/iv_feedback"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/iv_feedback"
            app:layout_constraintTop_toTopOf="@id/iv_feedback"
            android:text="@string/feedback" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_type_right_arrow__state_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/spacing16"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_offer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_items_height"
        android:layout_marginHorizontal="@dimen/spacing16"
        android:layout_marginTop="@dimen/spacing8"
        android:background="@drawable/profile_items_shape"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing8"
            android:src="@drawable/icon_type_offer__state_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_offer"
            style="?attr/textAppearanceTitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing16"
            app:layout_constraintBottom_toBottomOf="@id/iv_offer"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/iv_offer"
            app:layout_constraintTop_toTopOf="@id/iv_offer"
            android:text="@string/offer" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_type_right_arrow__state_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/spacing16"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_item_refund"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_items_height"
        android:layout_marginHorizontal="@dimen/spacing16"
        android:layout_marginTop="@dimen/spacing8"
        android:background="@drawable/profile_items_shape"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_item_refund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing8"
            android:src="@drawable/icon_type_refund__state_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_refund"
            style="?attr/textAppearanceTitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing16"
            app:layout_constraintBottom_toBottomOf="@id/iv_item_refund"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/iv_item_refund"
            app:layout_constraintTop_toTopOf="@id/iv_item_refund"
            android:text="@string/item_refund" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_type_right_arrow__state_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/spacing16"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_marginHorizontal="@dimen/spacing16"
        android:layout_marginBottom="@dimen/spacing32"
        android:text="@string/exit"/>

</LinearLayout>